# social_learning_networks

./: README.md
src/ibm/: CMakeLists.txt  for_loop_to_get_data.R  individual.cpp  individual.hpp  makefile  network_main.cpp  parameters.hpp  patch.cpp  patch.hpp  script_to_run_my_sims.sh  simulation.cpp  simulation.hpp
